--- a/app/src/main/res/layout/fragment_add_new_city.xml
+++ b/app/src/main/res/layout/fragment_add_new_city.xml
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".presentation.fragments.AddNewCityFragment">
 
-    <EditText
-        android:id="@+id/city_name_input_field"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_enter_city_name"
-        android:importantForAutofill="no"
-        android:inputType="text" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_insert_new_city"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_insert_new_city" />
+        <EditText
+            android:id="@+id/city_name_input_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_enter_city_name"
+            android:importantForAutofill="no"
+            android:inputType="text" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/button_insert_new_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_insert_new_city" />
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/loading_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+</FrameLayout>
