--- a/app/src/main/res/layout/fragment_add_new_city.xml
+++ b/app/src/main/res/layout/fragment_add_new_city.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@android:color/holo_orange_light"
     tools:context=".presentation.fragments.AddNewCityFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/middle_margin"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -16,23 +17,27 @@
             android:id="@+id/city_name_input_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:hint="@string/hint_enter_city_name"
             android:importantForAutofill="no"
-            android:inputType="text" />
+            android:inputType="text"
+            android:padding="@dimen/small_margin" />
 
         <Button
             android:id="@+id/button_insert_new_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_margin"
+            android:backgroundTint="@android:color/holo_red_light"
             android:text="@string/button_insert_new_city" />
 
     </LinearLayout>
 
     <ProgressBar
-        android:visibility="gone"
         android:id="@+id/loading_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </FrameLayout>
