--- a/app/src/main/res/layout/fragment_weather_list.xml
+++ b/app/src/main/res/layout/fragment_weather_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/weather_list_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/holo_orange_light"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_weather" />
 
@@ -18,8 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/middle_margin"
+        android:backgroundTint="@android:color/holo_red_light"
         android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="@android:color/holo_red_light"
         tools:ignore="ContentDescription" />
 
     <ProgressBar
