--- a/app/src/main/res/layout/fragment_weather_detail.xml
+++ b/app/src/main/res/layout/fragment_weather_detail.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/weather_status_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/weather_status_icon_size"
+        android:layout_height="@dimen/weather_status_icon_size"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <GridLayout
         android:layout_width="match_parent"
